Fix padding on .items-wrap

--- a/artifact-grid.css
+++ b/artifact-grid.css
@@ -16,7 +16,7 @@ grid-item:hover {
   align-content: flex-start;
   box-sizing: border-box;
   -moz-box-sizing: border-box;
-  padding: 50px 0;
+  padding: 60px 0 50px;
 }
 
 .item {
